# track38

./: .gitmodules  CMakeLists.txt  README.md
deprecated_src/: a.out  hubHandler.h  poweredup_simpleble.cpp  switchcontrol.cpp  switchcontrol.h  switchcontrolbox.cpp  switchcontrolbox.h  testUp.c  writehex.cpp
icons/: AppIcon.icns  AppIcon.xpm  icon_win.rc
resources/afdesing/: AppIcon.afdesign  ble.afdesign  cross.afdesign  double switch.afdesign  kurve.afdesign  stop.afdesign  stopX.afdesign  straight hor.afdesign  switch.afdesign
resources/tracks/: colorinfo.txt
src/: bleConDialog.cpp  bleConDialog.h  cellImageRenderer.cpp  cellImageRenderer.h  controleditpanel.cpp  controleditpanel.h  controlpanel.cpp  controlpanel.h  editBox.cpp  editBox.h  main.cpp  mapeditpanel.cpp  mapeditpanel.h  pfeditbox.cpp  pfeditbox.h  preferences.cpp  preferences.h  pupeditbox.cpp  pupeditbox.h  rceditbox.cpp  rceditbox.h  switch.cpp  switch.h  switchcontrol.cpp  switchcontrol.h  switchcontrolbox.cpp  switchcontrolbox.h  switchhandler.cpp  switchhandler.h  tempCodeRunnerFile.cpp  track38App.cpp  track38App.h  track38Frame.cpp  track38Frame.h  train.cpp  train.h  traincontrol.cpp  traincontrol.h  traincontrolbox.cpp  traincontrolbox.h  (+4 more)
src/ble/: blPermission.cpp  blPermission.h  blPermission.mm  bleConDialog.cpp  bleConDialog.h  bleControlThread.cpp  bleControlThread.h  bleSearch.cpp  bleSearch.h
src/poweredup/: PoweredUp.c  PoweredUp.h
src/poweredupp/: PoweredUpp.cpp  PoweredUpp.h  hubHandler.cpp  hubHandler.h
src/serial/: serial.h  serial_unix.c  serial_unix.h  serial_win.c  serial_win.h
